--- a/Overview.src.html
+++ b/Overview.src.html
@@ -41,7 +41,7 @@
 	
 	<dl>
 		<dt>This version:
-		<dd><!--begin-link-->http://sysapps.github.com/sysapps/proposals/alarm/Overview.html<!--end-link-->
+		<dd><!--begin-link-->http://alarm.sysapps.org/Overview.html<!--end-link-->
 
 		<dt class=dontpublish>Participate:</dt>
 		<dd class=dontpublish><a href="mailto:public-sysapps@w3.org?subject=%5Balarm-api%5D%20">public-sysapps@w3.org</a> (<a href="http://lists.w3.org/Archives/Public/public-sysapps/">archives</a>)
@@ -51,7 +51,7 @@
 		<dd><!--begin-link-->http://www.w3.org/TR/web-alarms/<!--end-link-->
 
 		<dt>Latest editor's draft:
-		<dd><!--begin-link-->http://sysapps.github.com/sysapps/proposals/alarm/Overview.html<!--end-link-->
+		<dd><!--begin-link-->http://alarm.sysapps.org/Overview.html<!--end-link-->
 		
 		<dt>Previous versions:
 		<dd><!--begin-link-->http://www.w3.org/TR/2013/WD-web-alarms-20130205/<!--end-link-->
