--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
 <div class="head">
 	<h1>Web Alarms API Specification</h1>
 	
-	<h2 class="no-num no-toc" id="editor-draft-&mdash;-6-march-2013">Editor Draft &mdash; 6 March 2013</h2>
+	<h2 class="no-num no-toc" id="editor-draft-&mdash;-7-march-2013">Editor Draft &mdash; 7 March 2013</h2>
 	
 	<dl>
 		<dt>This version:
-		<dd><!--begin-link--><a href="http://alarm.sysapps.org/Overview.html">http://alarm.sysapps.org/Overview.html</a><!--end-link-->
+		<dd><!--begin-link--><a href="http://web-alarms.sysapps.org">http://web-alarms.sysapps.org</a><!--end-link-->
 
 		<dt class="dontpublish">Participate:</dt>
-		<dd class="dontpublish"><a href="mailto:public-sysapps@w3.org?subject=%5Balarm-api%5D%20">public-sysapps@w3.org</a> (<a href="http://lists.w3.org/Archives/Public/public-sysapps/">archives</a>)
+		<dd class="dontpublish"><a href="mailto:public-sysapps@w3.org?subject=%5Bweb-alarms%5D%20">public-sysapps@w3.org</a> (<a href="http://lists.w3.org/Archives/Public/public-sysapps/">archives</a>)
 		<dd class="dontpublish"><a href="https://github.com/sysapps/sysapps/issues/new?title=%5Balarm-api%5D%20">File a bug</a>
 		
 		<dt>Latest published version:
 		<dd><!--begin-link--><a href="http://www.w3.org/TR/web-alarms/">http://www.w3.org/TR/web-alarms/</a><!--end-link-->
 
 		<dt>Latest editor's draft:
-		<dd><!--begin-link--><a href="http://alarm.sysapps.org/Overview.html">http://alarm.sysapps.org/Overview.html</a><!--end-link-->
+		<dd><!--begin-link--><a href="http://web-alarms.sysapps.org">http://web-alarms.sysapps.org</a><!--end-link-->
 		
 		<dt>Previous versions:
 		<dd><!--begin-link--><a href="http://www.w3.org/TR/2013/WD-web-alarms-20130205/">http://www.w3.org/TR/2013/WD-web-alarms-20130205/</a><!--end-link-->
