--- a/index.src.html
+++ b/index.src.html
@@ -41,17 +41,17 @@
 	
 	<dl>
 		<dt>This version:
-		<dd><!--begin-link-->http://alarm.sysapps.org/Overview.html<!--end-link-->
+		<dd><!--begin-link-->http://web-alarms.sysapps.org<!--end-link-->
 
 		<dt class=dontpublish>Participate:</dt>
-		<dd class=dontpublish><a href="mailto:public-sysapps@w3.org?subject=%5Balarm-api%5D%20">public-sysapps@w3.org</a> (<a href="http://lists.w3.org/Archives/Public/public-sysapps/">archives</a>)
+		<dd class=dontpublish><a href="mailto:public-sysapps@w3.org?subject=%5Bweb-alarms%5D%20">public-sysapps@w3.org</a> (<a href="http://lists.w3.org/Archives/Public/public-sysapps/">archives</a>)
 		<dd class=dontpublish><a href="https://github.com/sysapps/sysapps/issues/new?title=%5Balarm-api%5D%20">File a bug</a>
 		
 		<dt>Latest published version:
 		<dd><!--begin-link-->http://www.w3.org/TR/web-alarms/<!--end-link-->
 
 		<dt>Latest editor's draft:
-		<dd><!--begin-link-->http://alarm.sysapps.org/Overview.html<!--end-link-->
+		<dd><!--begin-link-->http://web-alarms.sysapps.org<!--end-link-->
 		
 		<dt>Previous versions:
 		<dd><!--begin-link-->http://www.w3.org/TR/2013/WD-web-alarms-20130205/<!--end-link-->
