--- a/index.src.html
+++ b/index.src.html
@@ -192,11 +192,22 @@ interface <dfn>AlarmManager</dfn> {
   <span>AlarmRequest</span> <span title="AlarmManager-remove">remove</span>(DOMString <var title>alarmId</var>);
 };</pre>
 
-<p>When invoked, the <dfn title="AlarmManager-getAll"><code>getAll()</code></dfn> method creates an <code>AlarmRequest</code> object, which, if successful, can be used to retrieve the <code>Alarm</code> objects corresponding to this application.
-
-<p>A user agent <em class="ct">must</em> handle the error cases in the following manner:
+<p>When invoked, the <dfn title="AlarmManager-getAll"><code>getAll()</code></dfn> method <em class="ct">must</em> run the following steps:
 <ol>
-<li>If any error is returned, set the <code>error</code> attribute of the <code>AlarmRequest</code> to a <code>DOMError</code> whose name is <code>"UnknownError"</code>, and <span data-anolis-spec=dom title=concept-event-fire>fire an event</span> named <code>error</code> at the request.</li>
+<li>Make a request to the system to retrieve the alarms that were registered by the current application and that did not go off yet.</li>
+<li>Create a new <code>AlarmRequest</code> object, set its <code>readyState</code> attribute to <code>"processing"</code>, and return it to the caller.</li>
+<li>If there is an error occurs, run these substeps and then terminate these steps:
+<ol>
+<li>Set the <code>readyState</code> attribute of the <code>AlarmRequest</code> object to <code>"done"</code>.
+<li>Set the <code>error</code> attribute of the <code>AlarmRequest</code> object to to a <code>DOMError</code> whose name is <code>"UnknownError"</code>.
+<li><span data-anolis-spec=dom title=concept-event-fire>Fire an event</span> named <code>error</code> at the <code>AlarmRequest</code> object.</li>
+</ol></li>
+<li>When the operation completed successfuly, run these substeps:
+<ol>
+<li>Set the <code>readyState</code> attribute of the <code>AlarmRequest</code> object to <code>"done"</code>.</li>
+<li>Set the <code>result</code> attribute of the <code>AlarmRequest</code> object to an array containing the <code>Alarm</code> objects that were retrieved.</li>
+<li><span data-anolis-spec=dom title=concept-event-fire>Fire an event</span> named <code>success</code> at the <code>AlarmRequest</code> object.</li>
+</ol></li>
 </ol>
 
 <p>The <dfn title="AlarmManager-add"><code>add(<var>date</var>, <var>respectTimezone</var>[, <var>data</var>])</code></dfn> method is used to register an alarm.
