Update Draft URL to http://www.w3.org/2012/sysapps/web-alarms/

--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@ Web Alarms API Specification
 Web Alarms API Specification
 
 </h1>
-<h2 class="no-num no-toc" id="editor-draft-—-23-april-2013">
-Editor Draft — 23 April 2013
+<h2 class="no-num no-toc" id="editor-draft-—-9-may-2013">
+Editor Draft — 9 May 2013
 </h2>
 <dl>
 <dt>
 This version:
 </dt>
 <dd>
-<!--begin-link--><a href="http://web-alarms.sysapps.org">http://web-alarms.sysapps.org</a><!--end-link-->
+<!--begin-link--><a href="http://www.w3.org/2012/sysapps/web-alarms/">http://www.w3.org/2012/sysapps/web-alarms/</a><!--end-link-->
 </dd>
 <dt class="dontpublish">
 Participate:
@@ -68,7 +68,7 @@ Latest published version:
 Latest editor's draft:
 </dt>
 <dd>
-<!--begin-link--><a href="http://web-alarms.sysapps.org">http://web-alarms.sysapps.org</a><!--end-link-->
+<!--begin-link--><a href="http://www.w3.org/2012/sysapps/web-alarms/">http://www.w3.org/2012/sysapps/web-alarms/</a><!--end-link-->
 </dd>
 <dt>
 Previous versions:
