--- a/index.src.html
+++ b/index.src.html
@@ -47,7 +47,7 @@ Editor Draft — [DATE]
 This version:
 </dt>
 <dd>
-<!--begin-link-->http://web-alarms.sysapps.org<!--end-link-->
+<!--begin-link-->http://www.w3.org/2012/sysapps/web-alarms/<!--end-link-->
 </dd>
 <dt class="dontpublish">
 Participate:
@@ -69,7 +69,7 @@ Latest published version:
 Latest editor's draft:
 </dt>
 <dd>
-<!--begin-link-->http://web-alarms.sysapps.org<!--end-link-->
+<!--begin-link-->http://www.w3.org/2012/sysapps/web-alarms/<!--end-link-->
 </dd>
 <dt>
 Previous versions:
